# python-project-52

./: .coverage  .gitignore  Dockerfile  Makefile  README.md  coverage.xml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  tests-check.yml
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/statuses/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/templates/: 404.html  base.html  form.html  index.html
task_manager/templates/labels/: delete.html  labels.html
task_manager/templates/statuses/: delete.html  statuses.html
task_manager/templates/tasks/: delete.html  task_show.html  tasks.html
task_manager/templates/users/: delete.html  users.html
task_manager/users/: apps.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
